put meta tag in html file

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Soulsmile Club website"
     />
+    <meta name="fo-verify" content="5d682b96-c26e-4eda-ab31-5dcb4892a432">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
