--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script type="text/javascript" src="http://classic.avantlink.com/affiliate_app_confirm.php?mode=js&authResponse=573ace53c56c289ba80005380eb9249c581f27ea"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
